# idea-pytest-sorting-PY-59546

./: pyproject.toml
tests/: .pytest-runtimes  test_a.py  test_b.py
