[tool.poetry]
name = "idea-pytest-sorting"
version = "0.1.0"
description = ""
authors = ["Hans Donner <hans@hansdonner.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-fast-first = "^1.0.5"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
